# bullrider-contracts

./: .cursorrules  Anchor.toml  README.md  metadata.json  package-lock.json
metadata/: metadata.json
programs/bullrider/: Cargo.toml
programs/bullrider/src/: constants.rs  lib.rs  state.rs
programs/bullrider/src/instructions/: claim_interest.rs  claim_interest_ix.rs  collect_fees.rs  initialize.rs  mint_token.rs  mod.rs  withdraw_and_burn.rs  withdraw_and_burn_ix.rs
scripts/: deploy-devnet.sh  deploy-mainnet.sh  deploy_devnet.sh
tests/: bullrider.ts
